SPCTR-548 Counter Icon Wrap - Fixed line height issue which added extra spacing below icon

--- a/src/blocks/counter/style.scss
+++ b/src/blocks/counter/style.scss
@@ -3,6 +3,7 @@
 	.wp-block-uagb-counter__icon,
 	.wp-block-uagb-counter__image-wrap {
 		display: inline-block;
+		line-height: 0;
 	}
 
 	&--number {
@@ -95,7 +96,6 @@
 // Astra theme adds line-height on frontend which interferes with the WYSIWYG experience.
 body[class*="astra"] {
 
-	.wp-block-uagb-counter__icon,
 	.wp-block-uagb-counter__title,
 	.wp-block-uagb-counter__number {
 		line-height: normal;
